# yamabiko

./: CNAME  HowToBuild.md  Makefile.am  README.md  configure.in  index.html  make-deb.sh  make-rpm.sh  params.json  yamabiko.conf  yamabiko.logrotate  yamabiko.prelink.conf
redhat/: yamabiko.init  yamabiko.spec
